// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`css macro composes 1`] = `
.css-w9g11r {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  justify-content: center;
}

<div
  className="css-w9g11r"
/>
`;

exports[`css macro composes with objects 1`] = `
.css-d6v2z3 {
  display: flex,block;
  width: 30px;
  height: calc(40vw - 50px);
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.css-d6v2z3:hover {
  color: blue;
}

.css-d6v2z3:after {
  content: " ";
  color: red;
}

@media (min-width: 420px) {
  .css-d6v2z3 {
    color: green;
  }
}

<div
  className="css-d6v2z3"
/>
`;

exports[`css macro composes with undefined values 1`] = `
.css-awzhlo {
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  justify-content: center;
}

<div
  className="css-awzhlo"
/>
`;

exports[`css macro handles more than 10 dynamic properties 1`] = `
.css-1fz3d5g {
  background: white;
  color: black;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  display: block;
  border-radius: 3px;
  padding: 25px;
  width: 500px;
  z-index: 100;
  font-size: 18px;
  text-align: center;
  border: solid 1px red;
}

<div
  className="css-1fz3d5g"
/>
`;

exports[`css macro handles objects 1`] = `
.css-1fe3owl {
  display: flex;
}

<div
  className="css-1fe3owl"
/>
`;
